# juno

./: .gitignore  README.md  go.mod
.github/workflows/: build-and-deploy.yml  juno-test.yml  p2p_smoke_test.yml  run-node-on-new-vm.yml  sync_first_100_blocks_smoke_test.yml
adapters/core2p2p/: class.go
blockbuilder/: builder.go  builder_test.go
blockbuilder/vm2core/: vm2core.go
blockchain/: blockchain.go  blockchain_test.go
builder/: builder.go  builder_test.go
clients/feeder/: feeder.go
clients/feeder/testdata/sepolia/state_update_with_block/: 2.json
cmd/juno/: juno.go
core/: block.go  state.go  state_test.go  transaction_test.go
core/trie/: node.go  node_test.go  transaction_storage_test.go  trie.go
db/: event_listener.go
db/pebble/: db.go  db_test.go
db/remote/: db.go
feeder/: feeder.go
jsonrpc/: server.go
junotest/: estimate_message_fee_test.go  extract_errors.awk  run_estimate_msg_fee_test.sh
mempool/: mempool.go  mempool_test.go
migration/: bucket_migrator.go  migration.go
mocks/: mock_vm.go
node/: metrics.go  metrics_pkg_test.go  node.go  throttled_vm.go
node/http/: server.go
p2p/starknet/: block_bodies.go  handlers.go  starknet_test.go
prover/: README.md  program_input.json  program_inputs.json  prover.go  prover.rs  prover_test.go  string.go
prover/rust/: Cargo.toml
prover/rust/src/: lib.rs
rpc/: block_test.go  events_test.go  handlers.go  handlers_test.go  simulation_test.go  state_update_test.go  trace.go  transaction.go  transaction_test.go
starknet/rust/: Cargo.toml
starknetdata/feeder/: feeder_test.go
sync/: sync.go  sync_test.go
utils/: network.go
vm/: vm.go  vm_test.go
vm/rust/: Cargo.toml
vm/rust/src/: jsonrpc.rs  juno_state_reader.rs  lib.rs
