[package]
name = "juno-starknet-compiler-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.171"
serde_json = { version = "1.0.96", features = ["raw_value"] }
cairo-lang-starknet-classes = "=2.6.0"
cairo-lang-casm = "=2.6.0"
cairo-lang-sierra-type-size = "=2.6.0"
cairo-lang-sierra-ap-change = "=2.6.0"
cairo-lang-eq-solver = "=2.6.0"
cairo-lang-sierra-gas = "=2.6.0"
cairo-lang-utils = "=2.6.0"
cairo-lang-sierra-to-casm = "=2.6.0"
cairo-lang-sierra = "=2.6.0"

[lib]
crate-type = ["staticlib"]
