[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.171"
serde_json = { version = "1.0.96", features = ["raw_value"] }
blockifier = "=0.6.0-rc.2"
starknet_api = "=0.10.0"
cairo-vm = "=0.9.2"
cairo-lang-starknet-classes = "=2.6.0"
cairo-lang-proc-macros = "=2.6.0"
cairo-lang-debug = "=2.6.0"
cairo-lang-semantic = "=2.6.0"
cairo-lang-sierra-generator = "=2.6.0"
cairo-lang-sierra-to-casm = "=2.6.0"
cairo-lang-sierra = "=2.6.0"
cairo-lang-parser = "=2.6.0"
cairo-lang-sierra-gas = "=2.6.0"
cairo-lang-filesystem = "=2.6.0"
cairo-lang-eq-solver = "=2.6.0"
cairo-lang-project = "=2.6.0"
cairo-lang-sierra-type-size = "=2.6.0"
cairo-lang-diagnostics = "=2.6.0"
cairo-lang-casm = "=2.6.0"
cairo-lang-utils = "=2.6.0"
cairo-lang-compiler = "=2.6.0"
cairo-lang-syntax-codegen = "=2.6.0"
cairo-lang-sierra-ap-change = "=2.6.0"
indexmap = "2.1.0"
cached = "0.46.1"
once_cell = "1.18.0"
lazy_static = "1.4.0"
semver = "1.0.22"
anyhow = "1.0.81"

[lib]
crate-type = ["staticlib"]
